--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -40,6 +40,44 @@ a {
     transition: .5s;
 }
 
+// Spinner
+.spinner {
+    display: block;
+	width: 100%;
+	max-width: 10rem;
+	animation: rotate 3.6s linear infinite;
+    margin: 50px auto;
+
+    circle {
+        fill: none;
+        stroke: $mainColor;
+        stroke-width: 8px;
+        stroke-dasharray: 300;
+        animation: outline 2s cubic-bezier(0.77,0,0.18,1) infinite;
+    }
+}
+
+// Alert
+.alert {
+    @include flexCenter(column); 
+
+    margin: 50px;
+    img {
+        padding-bottom: 20px;
+        width: 60px;
+        height: auto;
+    }
+
+    p {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: medium;
+        font-size: 24px;
+        color: white;
+        text-align: center;
+        max-width: 450px;
+    }
+}
+
 // Main
 main {
     width: 100%;
@@ -112,11 +150,12 @@ main {
     }
 
     // Submitted applications section
-    #submitted {
+    #applications {
+        
         padding-bottom: 75px;
         display: none;
         opacity: 0;
-
+        
         .wrapper {
             width: 1150px;
             margin: 0 auto;
@@ -429,6 +468,12 @@ main {
                             }
                         }
 
+                        .input-div.tel {
+                            input {
+                                padding-left: 94px;
+                            }
+                        }
+
                         .textarea-div {
                             position: relative;
 
@@ -441,7 +486,7 @@ main {
                             }
                         }
 
-                        input[type=text], input[type=email], input[type=tel], input[type=date], input[type=number], select {
+                        input[type=text], input[type=email], input[type=date], input[type=number], select {
                             margin: 20px 0;
                             padding: 0 50px;
                             width: 450px;
@@ -452,10 +497,6 @@ main {
                             color: black;
                             border: 1px solid $formColor;
                             outline: none;
-                        }
-
-                        input[type=tel] {
-                            padding-left: 94px;
                         }
 
                         a {
@@ -758,4 +799,26 @@ main {
             opacity: 0;
         }
     }
+}
+
+// Keyframes
+@keyframes outline {
+	0% {
+		stroke-dashoffset: 0;
+	}
+	50% {
+		stroke-dashoffset: 300;
+	}
+	100% {
+		stroke-dashoffset: 600;
+	}
+}
+
+@keyframes rotate {
+	from {
+		transform: rotate(0turn);
+	}
+	to {
+		transform: rotate(-1turn);
+	}
 }
